# mcptools

./: .gitignore  README.md  pyproject.toml
src/mcptools/: __init__.py  cli.py  client.py  commands.py
